--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,626 @@
+@charset "UTF-8";
+/*/////////////////////////////// reboot //////////////////////////////////////////////*/
+/* Убираем внутренние отступы */
+ul[class],
+ol[class] {
+  padding: 0;
+}
+
+/* Убираем внешние отступы */
+body,
+html,
+h1,
+h2,
+h3,
+h4,
+p,
+ul[class],
+ol[class],
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+/* Выставляем основные настройки по-умолчанию для body */
+body {
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
+ul[class],
+ol[class] {
+  list-style: none;
+}
+
+/* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Упрощаем работу с изображениями */
+img {
+  max-width: 100%;
+  display: block;
+}
+
+/* Указываем понятную периодичность в потоке данных у article*/
+article > * + * {
+  margin-top: 1em;
+}
+
+/* Наследуем шрифты для инпутов и кнопок */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Удаляем все анимации и переходы для людей, которые предпочитай их не использовать */
+@media (prefers-reduced-motion: reduce) {
+  * {
+    -webkit-animation-duration: 0.01ms !important;
+    animation-duration: 0.01ms !important;
+    -webkit-animation-iteration-count: 1 !important;
+    animation-iteration-count: 1 !important;
+    -webkit-transition-duration: 0.01ms !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+/*///////////////////////////////////// fonts //////////////////////////////////////////*/
+@font-face {
+  font-family: "Ubuntu";
+  src: url("../fonts/ubuntu/Ubuntu-light.eot");
+  src: local("☺"), url("../fonts/ubuntu/Ubuntu-light.woff") format("woff"), url("../fonts/ubuntu/Ubuntu-light.ttf") format("truetype"), url("../fonts/ubuntu/Ubuntu-light.svg") format("svg");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Inconsolata";
+  src: url("../fonts/Inconsolata/Inconsolata-Regular.eot");
+  src: local("☺"), url("../fonts/Inconsolata/Inconsolata-Regular.woff") format("woff"), url("../fonts/Inconsolata/Inconsolata-Regular.ttf") format("truetype"), url("../fonts/Inconsolata/Inconsolata-Regular.svg") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Playfair Display";
+  src: url("../fonts/PlayfairDisplay/PlayfairDisplay-Regular.eot");
+  src: local("☺"), url("../fonts/PlayfairDisplay/PlayfairDisplay-Regular.woff") format("woff"), url("../fonts/PlayfairDisplay/PlayfairDisplay-Regular.ttf") format("truetype"), url("../fonts/PlayfairDisplay/PlayfairDisplay-Regular.svg") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Playfair Display";
+  src: url("../fonts/PlayfairDisplay/PlayfairDisplay-Bold.eot");
+  src: local("☺"), url("../fonts/PlayfairDisplay/PlayfairDisplay-Bold.woff") format("woff"), url("../fonts/PlayfairDisplay/PlayfairDisplay-Bold.ttf") format("truetype"), url("../fonts/PlayfairDisplay/PlayfairDisplay-Bold.svg") format("svg");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Playfair Display";
+  src: url("../fonts/PlayfairDisplay/PlayfairDisplay-Italic.eot");
+  src: local("☺"), url("../fonts/PlayfairDisplay/PlayfairDisplay-Italic.woff") format("woff"), url("../fonts/PlayfairDisplay/PlayfairDisplay-Italic.ttf") format("truetype"), url("../fonts/PlayfairDisplay/PlayfairDisplay-Italic.svg") format("svg");
+  font-weight: normal;
+  font-style: italic;
+}
+
+/*//////////////////////////////////// nain_styles /////////////////////////////////////*/
+body {
+  font-family: "Playfair Display", serif;
+  color: #626262;
+}
+
+.lock {
+  overflow: hidden;
+}
+
+.main {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.top__wrapper {
+  max-width: 1060px;
+  margin: 0 auto;
+  padding: 0 10px 0 10px;
+}
+
+.container {
+  max-width: 901px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+/*////////////////////////////////////// imports ///////////////////////////////////////*/
+.header {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  min-height: 163px;
+}
+
+.header__logo {
+  color: #000000;
+  font-family: "Inconsolata", monospace;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 24px;
+  text-transform: uppercase;
+  letter-spacing: 6px;
+}
+
+.menu__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  list-style-type: none;
+  min-width: 573px;
+}
+
+.menu__link {
+  text-decoration: none;
+  color: #626262;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  text-transform: uppercase;
+}
+
+.menu__burger {
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  display: none;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.menu__burger > span {
+  content: "";
+  position: absolute;
+  top: 50%;
+  margin-bottom: -1px;
+  left: 5px;
+  height: 2px;
+  width: 30px;
+  background-color: #000000;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.menu__burger > span::before {
+  position: absolute;
+  top: -10px;
+  left: 0;
+  content: "";
+  width: 30px;
+  height: 2px;
+  background-color: #000000;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.menu__burger > span::after {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  content: "";
+  width: 30px;
+  height: 2px;
+  background-color: #000000;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.logo__link {
+  text-decoration: none;
+  color: #000000;
+}
+
+.blog {
+  padding: 99px 0 135px 0;
+  width: 100%;
+}
+
+.blog__title {
+  color: #b4ad9e;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 14px;
+  line-height: 14px;
+  font-weight: 300;
+  text-align: left;
+  text-transform: uppercase;
+  margin-bottom: 29px;
+}
+
+.blog__subtitle {
+  color: #626262;
+  font-family: "Playfair Display", serif;
+  font-size: 30px;
+  line-height: 30px;
+  font-weight: 400;
+  text-align: left;
+  margin-bottom: 34px;
+}
+
+.blog__text {
+  color: #626262;
+  font-family: "Playfair Display", serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  margin-bottom: 52px;
+}
+
+.blog__coment {
+  color: #b4ad9e;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 14px;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.items__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.items__item {
+  max-width: 420px;
+  margin-bottom: 132px;
+}
+
+.items__img {
+  margin-bottom: 32px;
+}
+
+.items__category {
+  color: #b4ad9e;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  font-style: normal;
+  letter-spacing: normal;
+  line-height: 14px;
+  text-align: left;
+  text-transform: uppercase;
+  margin-bottom: 28px;
+}
+
+.items__title {
+  color: #626262;
+  font-family: "Playfair Display", serif;
+  font-size: 30px;
+  line-height: 30px;
+  font-weight: 400;
+  text-align: left;
+  margin-bottom: 34px;
+}
+
+.items__text {
+  color: #626262;
+  font-family: "Playfair Display", serif;
+  font-size: 14px;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: normal;
+  line-height: 24px;
+  text-align: left;
+}
+
+.bottom {
+  padding-top: 103px;
+  margin-bottom: 166px;
+}
+
+.load-more {
+  display: block;
+  width: 164px;
+  height: 60px;
+  margin: 0 auto;
+  border: 1px solid #626262;
+  background-color: #fff;
+}
+
+.load-more__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: #626262;
+  font-family: "Playfair Display", serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+}
+
+.mail {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 287px;
+  background-color: #f0f0f0;
+  padding: 74px 0;
+}
+
+.mail__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 90%;
+  min-height: 170px;
+  margin: 0 auto;
+}
+
+.mail__title {
+  color: #333333;
+  font-family: "Playfair Display", serif;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 30px;
+  text-align: center;
+  letter-spacing: 0.75px;
+  margin-bottom: 73px;
+}
+
+.mail__form {
+  width: 367px;
+  height: 36px;
+  border: none;
+  background-color: #f0f0f0;
+  outline: none;
+}
+
+.mail__form::-webkit-input-placeholder {
+  color: #626262;
+  font-family: "Playfair Display", serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+}
+
+.mail__form:-ms-input-placeholder {
+  color: #626262;
+  font-family: "Playfair Display", serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+}
+
+.mail__form::-ms-input-placeholder {
+  color: #626262;
+  font-family: "Playfair Display", serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+}
+
+.mail__form::placeholder {
+  color: #626262;
+  font-family: "Playfair Display", serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+}
+
+.mail__submit {
+  cursor: pointer;
+  border: none;
+  background-color: #f0f0f0;
+  outline: none;
+}
+
+.input__wrapper {
+  border-bottom: 2px solid #000000;
+}
+
+@media (max-width: 950px) {
+  .blog {
+    padding: 99px 20px 135px;
+  }
+  /*/////////////////////////// items ////////////////////////////////// */
+  .items__wrapper {
+    display: block;
+    padding: 0 20px;
+  }
+  .items__item {
+    margin: 0 auto;
+  }
+  .items__text {
+    margin-bottom: 40px;
+  }
+  .items__img {
+    margin-bottom: 10px;
+  }
+  .items__title {
+    margin-bottom: 10px;
+  }
+  .items__category {
+    margin-bottom: 10px;
+  }
+}
+
+@media (max-width: 768px) {
+  .top__wrapper {
+    padding: 0;
+    margin: 0;
+  }
+  /*///////////////////// menu ////////////////////////////////// */
+  .menu__list {
+    min-width: 100%;
+    display: block;
+    padding-left: 25px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    position: absolute;
+    background-color: #f0f0f0;
+    top: 63px;
+    left: -100%;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+  }
+  .menu__list-active {
+    max-width: 100%;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+    position: absolute;
+    top: 63px;
+    left: 0;
+    display: block;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .menu__link {
+    padding-left: 20px;
+  }
+  .menu__item {
+    margin-bottom: 30px;
+  }
+  .menu__item:first-child {
+    margin-top: 30px;
+  }
+  /*/////////////////////////// header //////////////////////////*/
+  .header {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    min-height: 63px;
+  }
+  .menu__burger {
+    display: block;
+  }
+  .menu__burger-active > span {
+    width: 0;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+  }
+  .menu__burger-active > span::before {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    top: -5px;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+  }
+  .menu__burger-active > span::after {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    top: -5px;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+  }
+  /*////////////////////////// blog ////////////////////////////////////*/
+  .blog {
+    padding: 50px 20px;
+  }
+  .blog__text {
+    margin-bottom: 25px;
+  }
+}
+
+@media (max-width: 470px) {
+  .input__wrapper {
+    width: 270px;
+  }
+  .mail__form {
+    width: 220px;
+  }
+}
 
