--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,7 @@ body {
 }
 
 /*////////////////////////////////////// imports ///////////////////////////////////////*/
+/*////////////////////////////////////// header ///////////////////////////////////////*/
 .header {
   position: relative;
   display: -webkit-box;
@@ -252,6 +253,7 @@ body {
   color: #000000;
 }
 
+/*////////////////////////////////////// blog ///////////////////////////////////////*/
 .blog {
   padding: 99px 0 135px 0;
   width: 100%;
@@ -298,6 +300,7 @@ body {
   text-transform: uppercase;
 }
 
+/*////////////////////////////////////// items ///////////////////////////////////////*/
 .items__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -388,6 +391,7 @@ body {
   text-align: left;
 }
 
+/*////////////////////////////////////// mail ///////////////////////////////////////*/
 .mail {
   width: 100%;
   display: -webkit-box;
@@ -489,6 +493,7 @@ body {
   border-bottom: 2px solid #000000;
 }
 
+/*////////////////////////////////////// media ///////////////////////////////////////*/
 @media (max-width: 950px) {
   .blog {
     padding: 99px 20px 135px;
@@ -623,4 +628,3 @@ body {
     width: 220px;
   }
 }
-
